gachaneitor/web/antlr/GachaneitorParser.py
# Generated from web/antlr/Gachaneitor.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class GachaneitorParser ( Parser ):

    grammarFileName = "Gachaneitor.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'receta'", "'nombre'", "'descripcion'", 
                     "'tiempo'", "'total'", "'preparacion'", "':'", "';'", 
                     "'-'", "'pasos'", "'ingredientes'", "'temperatura'", 
                     "'velocidad'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'{'", "'}'", "'\"'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "RECETA", "NOMBRE", "DESCRIPCION", "TIEMPO", 
                      "TOTAL", "PREPARACION", "DOSPUNTOS", "PUNTOYCOMA", 
                      "GUION", "PASOS", "INGREDIENTES", "TEMPERATURA", "VELOCIDAD", 
                      "UNIDAD_CANTIDAD", "UNIDAD_TEMP", "UNIDAD_TIEMPO", 
                      "VERBO_MOV", "VERBO_COC", "VERBO_PER", "OTROS_CARACTERES", 
                      "LLAVE_ABIERTA", "LLAVE_CERRADA", "COMILLA", "NUMERO", 
                      "DIGITO_VELOCIDAD", "IDENT_NOMBRE", "CADENA", "TILDES", 
                      "CONTENIDO_DESCRIPCION", "CORCHETE_ABIERTO", "CORCHETE_CERRADO", 
                      "COMMENT", "WS" ]

    RULE_inicio = 0
    RULE_receta = 1
    RULE_nombre = 2
    RULE_descripcion = 3
    RULE_tiempo_receta = 4
    RULE_ingredientes = 5
    RULE_ingrediente_lista = 6
    RULE_ingrediente = 7
    RULE_pasos = 8
    RULE_paso = 9
    RULE_paso_mov = 10
    RULE_paso_coc = 11
    RULE_paso_per = 12
    RULE_cantidad = 13
    RULE_tiempo = 14
    RULE_temperatura = 15
    RULE_velocidad = 16

    ruleNames =  [ "inicio", "receta", "nombre", "descripcion", "tiempo_receta", 
                   "ingredientes", "ingrediente_lista", "ingrediente", "pasos", 
                   "paso", "paso_mov", "paso_coc", "paso_per", "cantidad", 
                   "tiempo", "temperatura", "velocidad" ]

    EOF = Token.EOF
    RECETA=1
    NOMBRE=2
    DESCRIPCION=3
    TIEMPO=4
    TOTAL=5
    PREPARACION=6
    DOSPUNTOS=7
    PUNTOYCOMA=8
    GUION=9
    PASOS=10
    INGREDIENTES=11
    TEMPERATURA=12
    VELOCIDAD=13
    UNIDAD_CANTIDAD=14
    UNIDAD_TEMP=15
    UNIDAD_TIEMPO=16
    VERBO_MOV=17
    VERBO_COC=18
    VERBO_PER=19
    OTROS_CARACTERES=20
    LLAVE_ABIERTA=21
    LLAVE_CERRADA=22
    COMILLA=23
    NUMERO=24
    DIGITO_VELOCIDAD=25
    IDENT_NOMBRE=26
    CADENA=27
    TILDES=28
    CONTENIDO_DESCRIPCION=29
    CORCHETE_ABIERTO=30
    CORCHETE_CERRADO=31
    COMMENT=32
    WS=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class InicioContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def receta(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GachaneitorParser.RecetaContext)
            else:
                return self.getTypedRuleContext(GachaneitorParser.RecetaContext,i)


        def getRuleIndex(self):
            return GachaneitorParser.RULE_inicio

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInicio" ):
                listener.enterInicio(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInicio" ):
                listener.exitInicio(self)




    def inicio(self):

        localctx = GachaneitorParser.InicioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_inicio)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.receta()
            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GachaneitorParser.RECETA or _la==GachaneitorParser.LLAVE_ABIERTA:
                self.state = 35
                self.receta()
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RecetaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LLAVE_ABIERTA(self):
            return self.getToken(GachaneitorParser.LLAVE_ABIERTA, 0)

        def nombre(self):
            return self.getTypedRuleContext(GachaneitorParser.NombreContext,0)


        def descripcion(self):
            return self.getTypedRuleContext(GachaneitorParser.DescripcionContext,0)


        def tiempo_receta(self):
            return self.getTypedRuleContext(GachaneitorParser.Tiempo_recetaContext,0)


        def ingredientes(self):
            return self.getTypedRuleContext(GachaneitorParser.IngredientesContext,0)


        def pasos(self):
            return self.getTypedRuleContext(GachaneitorParser.PasosContext,0)


        def LLAVE_CERRADA(self):
            return self.getToken(GachaneitorParser.LLAVE_CERRADA, 0)

        def RECETA(self):
            return self.getToken(GachaneitorParser.RECETA, 0)

        def getRuleIndex(self):
            return GachaneitorParser.RULE_receta

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReceta" ):
                listener.enterReceta(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReceta" ):
                listener.exitReceta(self)




    def receta(self):

        localctx = GachaneitorParser.RecetaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_receta)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GachaneitorParser.RECETA:
                self.state = 41
                self.match(GachaneitorParser.RECETA)


            self.state = 44
            self.match(GachaneitorParser.LLAVE_ABIERTA)
            self.state = 45
            self.nombre()
            self.state = 46
            self.descripcion()
            self.state = 47
            self.tiempo_receta()
            self.state = 48
            self.ingredientes()
            self.state = 49
            self.pasos()
            self.state = 50
            self.match(GachaneitorParser.LLAVE_CERRADA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NombreContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMILLA(self, i:int=None):
            if i is None:
                return self.getTokens(GachaneitorParser.COMILLA)
            else:
                return self.getToken(GachaneitorParser.COMILLA, i)

        def IDENT_NOMBRE(self):
            return self.getToken(GachaneitorParser.IDENT_NOMBRE, 0)

        def NOMBRE(self):
            return self.getToken(GachaneitorParser.NOMBRE, 0)

        def getRuleIndex(self):
            return GachaneitorParser.RULE_nombre

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNombre" ):
                listener.enterNombre(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNombre" ):
                listener.exitNombre(self)




    def nombre(self):

        localctx = GachaneitorParser.NombreContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_nombre)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GachaneitorParser.NOMBRE:
                self.state = 52
                self.match(GachaneitorParser.NOMBRE)


            self.state = 55
            self.match(GachaneitorParser.COMILLA)
            self.state = 56
            self.match(GachaneitorParser.IDENT_NOMBRE)
            self.state = 57
            self.match(GachaneitorParser.COMILLA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DescripcionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTENIDO_DESCRIPCION(self):
            return self.getToken(GachaneitorParser.CONTENIDO_DESCRIPCION, 0)

        def DESCRIPCION(self):
            return self.getToken(GachaneitorParser.DESCRIPCION, 0)

        def getRuleIndex(self):
            return GachaneitorParser.RULE_descripcion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDescripcion" ):
                listener.enterDescripcion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDescripcion" ):
                listener.exitDescripcion(self)




    def descripcion(self):

        localctx = GachaneitorParser.DescripcionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_descripcion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GachaneitorParser.DESCRIPCION:
                self.state = 59
                self.match(GachaneitorParser.DESCRIPCION)


            self.state = 62
            self.match(GachaneitorParser.CONTENIDO_DESCRIPCION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tiempo_recetaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LLAVE_ABIERTA(self):
            return self.getToken(GachaneitorParser.LLAVE_ABIERTA, 0)

        def TOTAL(self):
            return self.getToken(GachaneitorParser.TOTAL, 0)

        def tiempo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GachaneitorParser.TiempoContext)
            else:
                return self.getTypedRuleContext(GachaneitorParser.TiempoContext,i)


        def PREPARACION(self):
            return self.getToken(GachaneitorParser.PREPARACION, 0)

        def LLAVE_CERRADA(self):
            return self.getToken(GachaneitorParser.LLAVE_CERRADA, 0)

        def TIEMPO(self):
            return self.getToken(GachaneitorParser.TIEMPO, 0)

        def getRuleIndex(self):
            return GachaneitorParser.RULE_tiempo_receta

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTiempo_receta" ):
                listener.enterTiempo_receta(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTiempo_receta" ):
                listener.exitTiempo_receta(self)




    def tiempo_receta(self):

        localctx = GachaneitorParser.Tiempo_recetaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tiempo_receta)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GachaneitorParser.TIEMPO:
                self.state = 64
                self.match(GachaneitorParser.TIEMPO)


            self.state = 67
            self.match(GachaneitorParser.LLAVE_ABIERTA)
            self.state = 68
            self.match(GachaneitorParser.TOTAL)
            self.state = 69
            self.tiempo()
            self.state = 70
            self.match(GachaneitorParser.PREPARACION)
            self.state = 71
            self.tiempo()
            self.state = 72
            self.match(GachaneitorParser.LLAVE_CERRADA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IngredientesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LLAVE_ABIERTA(self):
            return self.getToken(GachaneitorParser.LLAVE_ABIERTA, 0)

        def ingrediente_lista(self):
            return self.getTypedRuleContext(GachaneitorParser.Ingrediente_listaContext,0)


        def LLAVE_CERRADA(self):
            return self.getToken(GachaneitorParser.LLAVE_CERRADA, 0)

        def INGREDIENTES(self):
            return self.getToken(GachaneitorParser.INGREDIENTES, 0)

        def getRuleIndex(self):
            return GachaneitorParser.RULE_ingredientes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIngredientes" ):
                listener.enterIngredientes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIngredientes" ):
                listener.exitIngredientes(self)




    def ingredientes(self):

        localctx = GachaneitorParser.IngredientesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ingredientes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GachaneitorParser.INGREDIENTES:
                self.state = 74
                self.match(GachaneitorParser.INGREDIENTES)


            self.state = 77
            self.match(GachaneitorParser.LLAVE_ABIERTA)
            self.state = 78
            self.ingrediente_lista()
            self.state = 79
            self.match(GachaneitorParser.LLAVE_CERRADA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ingrediente_listaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ingrediente(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GachaneitorParser.IngredienteContext)
            else:
                return self.getTypedRuleContext(GachaneitorParser.IngredienteContext,i)


        def PUNTOYCOMA(self, i:int=None):
            if i is None:
                return self.getTokens(GachaneitorParser.PUNTOYCOMA)
            else:
                return self.getToken(GachaneitorParser.PUNTOYCOMA, i)

        def getRuleIndex(self):
            return GachaneitorParser.RULE_ingrediente_lista

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIngrediente_lista" ):
                listener.enterIngrediente_lista(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIngrediente_lista" ):
                listener.exitIngrediente_lista(self)




    def ingrediente_lista(self):

        localctx = GachaneitorParser.Ingrediente_listaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ingrediente_lista)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 81
                self.ingrediente()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GachaneitorParser.PUNTOYCOMA:
                    self.state = 82
                    self.match(GachaneitorParser.PUNTOYCOMA)


                self.state = 87 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==GachaneitorParser.COMILLA):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IngredienteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMILLA(self, i:int=None):
            if i is None:
                return self.getTokens(GachaneitorParser.COMILLA)
            else:
                return self.getToken(GachaneitorParser.COMILLA, i)

        def IDENT_NOMBRE(self):
            return self.getToken(GachaneitorParser.IDENT_NOMBRE, 0)

        def cantidad(self):
            return self.getTypedRuleContext(GachaneitorParser.CantidadContext,0)


        def DOSPUNTOS(self):
            return self.getToken(GachaneitorParser.DOSPUNTOS, 0)

        def getRuleIndex(self):
            return GachaneitorParser.RULE_ingrediente

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIngrediente" ):
                listener.enterIngrediente(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIngrediente" ):
                listener.exitIngrediente(self)




    def ingrediente(self):

        localctx = GachaneitorParser.IngredienteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ingrediente)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(GachaneitorParser.COMILLA)
            self.state = 90
            self.match(GachaneitorParser.IDENT_NOMBRE)
            self.state = 91
            self.match(GachaneitorParser.COMILLA)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GachaneitorParser.DOSPUNTOS:
                self.state = 92
                self.match(GachaneitorParser.DOSPUNTOS)


            self.state = 95
            self.cantidad()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PasosContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LLAVE_ABIERTA(self):
            return self.getToken(GachaneitorParser.LLAVE_ABIERTA, 0)

        def LLAVE_CERRADA(self):
            return self.getToken(GachaneitorParser.LLAVE_CERRADA, 0)

        def PASOS(self):
            return self.getToken(GachaneitorParser.PASOS, 0)

        def paso(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GachaneitorParser.PasoContext)
            else:
                return self.getTypedRuleContext(GachaneitorParser.PasoContext,i)


        def getRuleIndex(self):
            return GachaneitorParser.RULE_pasos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPasos" ):
                listener.enterPasos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPasos" ):
                listener.exitPasos(self)




    def pasos(self):

        localctx = GachaneitorParser.PasosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_pasos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GachaneitorParser.PASOS:
                self.state = 97
                self.match(GachaneitorParser.PASOS)


            self.state = 100
            self.match(GachaneitorParser.LLAVE_ABIERTA)
            self.state = 102 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 101
                self.paso()
                self.state = 104 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==GachaneitorParser.GUION):
                    break

            self.state = 106
            self.match(GachaneitorParser.LLAVE_CERRADA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PasoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paso_mov(self):
            return self.getTypedRuleContext(GachaneitorParser.Paso_movContext,0)


        def paso_coc(self):
            return self.getTypedRuleContext(GachaneitorParser.Paso_cocContext,0)


        def paso_per(self):
            return self.getTypedRuleContext(GachaneitorParser.Paso_perContext,0)


        def getRuleIndex(self):
            return GachaneitorParser.RULE_paso

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPaso" ):
                listener.enterPaso(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPaso" ):
                listener.exitPaso(self)




    def paso(self):

        localctx = GachaneitorParser.PasoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paso)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.paso_mov()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.paso_coc()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.paso_per()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Paso_movContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GUION(self):
            return self.getToken(GachaneitorParser.GUION, 0)

        def VERBO_MOV(self):
            return self.getToken(GachaneitorParser.VERBO_MOV, 0)

        def ingrediente_lista(self):
            return self.getTypedRuleContext(GachaneitorParser.Ingrediente_listaContext,0)


        def tiempo(self):
            return self.getTypedRuleContext(GachaneitorParser.TiempoContext,0)


        def velocidad(self):
            return self.getTypedRuleContext(GachaneitorParser.VelocidadContext,0)


        def getRuleIndex(self):
            return GachaneitorParser.RULE_paso_mov

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPaso_mov" ):
                listener.enterPaso_mov(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPaso_mov" ):
                listener.exitPaso_mov(self)




    def paso_mov(self):

        localctx = GachaneitorParser.Paso_movContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paso_mov)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(GachaneitorParser.GUION)
            self.state = 114
            self.match(GachaneitorParser.VERBO_MOV)
            self.state = 115
            self.ingrediente_lista()
            self.state = 116
            self.tiempo()
            self.state = 117
            self.velocidad()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Paso_cocContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GUION(self):
            return self.getToken(GachaneitorParser.GUION, 0)

        def VERBO_COC(self):
            return self.getToken(GachaneitorParser.VERBO_COC, 0)

        def ingrediente_lista(self):
            return self.getTypedRuleContext(GachaneitorParser.Ingrediente_listaContext,0)


        def tiempo(self):
            return self.getTypedRuleContext(GachaneitorParser.TiempoContext,0)


        def temperatura(self):
            return self.getTypedRuleContext(GachaneitorParser.TemperaturaContext,0)


        def getRuleIndex(self):
            return GachaneitorParser.RULE_paso_coc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPaso_coc" ):
                listener.enterPaso_coc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPaso_coc" ):
                listener.exitPaso_coc(self)




    def paso_coc(self):

        localctx = GachaneitorParser.Paso_cocContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_paso_coc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(GachaneitorParser.GUION)
            self.state = 120
            self.match(GachaneitorParser.VERBO_COC)
            self.state = 121
            self.ingrediente_lista()
            self.state = 122
            self.tiempo()
            self.state = 123
            self.temperatura()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Paso_perContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GUION(self):
            return self.getToken(GachaneitorParser.GUION, 0)

        def VERBO_PER(self):
            return self.getToken(GachaneitorParser.VERBO_PER, 0)

        def ingrediente_lista(self):
            return self.getTypedRuleContext(GachaneitorParser.Ingrediente_listaContext,0)


        def getRuleIndex(self):
            return GachaneitorParser.RULE_paso_per

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPaso_per" ):
                listener.enterPaso_per(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPaso_per" ):
                listener.exitPaso_per(self)




    def paso_per(self):

        localctx = GachaneitorParser.Paso_perContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_paso_per)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(GachaneitorParser.GUION)
            self.state = 126
            self.match(GachaneitorParser.VERBO_PER)
            self.state = 127
            self.ingrediente_lista()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CantidadContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMERO(self):
            return self.getToken(GachaneitorParser.NUMERO, 0)

        def UNIDAD_CANTIDAD(self):
            return self.getToken(GachaneitorParser.UNIDAD_CANTIDAD, 0)

        def getRuleIndex(self):
            return GachaneitorParser.RULE_cantidad

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCantidad" ):
                listener.enterCantidad(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCantidad" ):
                listener.exitCantidad(self)




    def cantidad(self):

        localctx = GachaneitorParser.CantidadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_cantidad)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(GachaneitorParser.NUMERO)
            self.state = 130
            self.match(GachaneitorParser.UNIDAD_CANTIDAD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TiempoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMERO(self):
            return self.getToken(GachaneitorParser.NUMERO, 0)

        def UNIDAD_TIEMPO(self):
            return self.getToken(GachaneitorParser.UNIDAD_TIEMPO, 0)

        def getRuleIndex(self):
            return GachaneitorParser.RULE_tiempo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTiempo" ):
                listener.enterTiempo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTiempo" ):
                listener.exitTiempo(self)




    def tiempo(self):

        localctx = GachaneitorParser.TiempoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_tiempo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(GachaneitorParser.NUMERO)
            self.state = 133
            self.match(GachaneitorParser.UNIDAD_TIEMPO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TemperaturaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEMPERATURA(self):
            return self.getToken(GachaneitorParser.TEMPERATURA, 0)

        def NUMERO(self):
            return self.getToken(GachaneitorParser.NUMERO, 0)

        def UNIDAD_TEMP(self):
            return self.getToken(GachaneitorParser.UNIDAD_TEMP, 0)

        def getRuleIndex(self):
            return GachaneitorParser.RULE_temperatura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemperatura" ):
                listener.enterTemperatura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemperatura" ):
                listener.exitTemperatura(self)




    def temperatura(self):

        localctx = GachaneitorParser.TemperaturaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_temperatura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(GachaneitorParser.TEMPERATURA)
            self.state = 136
            self.match(GachaneitorParser.NUMERO)
            self.state = 137
            self.match(GachaneitorParser.UNIDAD_TEMP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VelocidadContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VELOCIDAD(self):
            return self.getToken(GachaneitorParser.VELOCIDAD, 0)

        def DIGITO_VELOCIDAD(self):
            return self.getToken(GachaneitorParser.DIGITO_VELOCIDAD, 0)

        def getRuleIndex(self):
            return GachaneitorParser.RULE_velocidad

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVelocidad" ):
                listener.enterVelocidad(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVelocidad" ):
                listener.exitVelocidad(self)




    def velocidad(self):

        localctx = GachaneitorParser.VelocidadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_velocidad)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(GachaneitorParser.VELOCIDAD)
            self.state = 140
            self.match(GachaneitorParser.DIGITO_VELOCIDAD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





